# fastreact

./: .gitignore  README.md  read.md
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  schemas.py  users.py
frontend/: package.json  postcss.config.cjs  tailwind.config.js
frontend/src/: App.css  App.tsx  AuthContext.tsx  main.tsx
frontend/src/Pages/: AuthCallbackPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
