[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.12",
    "httpx-oauth>=0.16.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
